# Ubitunedec

./: README.md
cmd/: Readme.txt
cmd/src/: 6BitAdpcm.h  Adpcm.cpp  Adpcm.h  AudioExceptions.h  AudioStream.h  DataExceptions.cpp  DataExceptions.h  DataStream.cpp  FileDataStream.h  Interleaved9Stream.h  InterleavedStream.cpp  InterleavedStream.h  LayeredStreamHelper.h  Main.cpp  OggVorbisStream.h  OldInterleavedStream.cpp  OldInterleavedStream.h  Pch.cpp  Scan.h  Segment.cpp  StreamHelper.h  UbiFormats.cpp  UbiFormats.h  Version.h  Version5Stream.cpp
gui/: Readme.txt
src/: CMakeLists.txt
src/Decoding/: AudioExceptions.cpp  AudioStream.cpp  BufferDataStream.cpp  BufferDataStream.h  DataStream.h  FileDataStream.cpp  Interleaved9Stream.cpp  LayeredStreamHelper.cpp  OggVorbisStream.cpp  Old6Or4BitStream.cpp  Old6Or4BitStream.h  Pch.h  RawCompressedStream.cpp  RawCompressedStream.h  RawPcmStream.cpp  RawPcmStream.h  Scan.cpp  Segment.h  SegmentParser.cpp  SegmentParser.h  StreamHelper.cpp  Version.h  Version5Stream.h  WaveWriter.cpp  WaveWriter.h
src/Functionality/: FilesList.cpp  FilesList.h  Output.cpp  Output.h  Segment.cpp  Segment.h  SegmentsList.cpp
